--- a/Index.html
+++ b/Index.html
@@ -93,8 +93,8 @@
           </div>
   
           <div class="about__box-text">
-            <p class="title__about">Jean Herique</p>
-            <p class="date__about">2023</p>
+            <p class="title__about">Jean Henrique</p>
+            <p class="date__about">2023 - 2024</p>
             <p class="about__text">No final de 2022, decidiu conhecer o rumo da programção. Só não esperava se apaixonar tanto pelo desenvolvimento web.</p>
             <p class="about__text">Em busca do meu primeiro emprego dev.</p>
           </div>
