--- a/Projetos.html
+++ b/Projetos.html
@@ -23,7 +23,7 @@
     
           <li class="menu-li"><a href="./Index.html" class="menu-a">Início</a></li>
           <li class="menu-li"><a href="./Projetos.html" class="menu-a">Projetos</a></li>
-          <li class="menu-li"><a href="#Sobre" class="menu-a">Sobre</a></li>
+          <li class="menu-li"><a href="./Sobre.html" class="menu-a">Sobre</a></li>
           
         </ul>
       </nav>
